src/shared/core/antlr/LambdaParser.ts
// @ts-nocheck
// Generated from ./src/shared/core/antlr/Lambda.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LambdaListener from "./LambdaListener.js";
import LambdaVisitor from "./LambdaVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LambdaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly LAMBDA = 9;
	public static readonly LAMBDA_CAPITALIZED = 10;
	public static readonly LET = 11;
	public static readonly IN = 12;
	public static readonly FIX = 13;
	public static readonly TYPEDEF = 14;
	public static readonly KIND_STAR = 15;
	public static readonly APOSTROPHE = 16;
	public static readonly FORALL = 17;
	public static readonly CASE = 18;
	public static readonly OF = 19;
	public static readonly INL = 20;
	public static readonly INR = 21;
	public static readonly OR = 22;
	public static readonly AS = 23;
	public static readonly IF = 24;
	public static readonly THEN = 25;
	public static readonly ELSEIF = 26;
	public static readonly ELSE = 27;
	public static readonly UNDERSCORE = 28;
	public static readonly EQEQ = 29;
	public static readonly NEQ = 30;
	public static readonly LEQ = 31;
	public static readonly GEQ = 32;
	public static readonly EQ = 33;
	public static readonly LT = 34;
	public static readonly MT = 35;
	public static readonly MUL = 36;
	public static readonly PLUS = 37;
	public static readonly MINUS = 38;
	public static readonly DIV = 39;
	public static readonly LBRACK = 40;
	public static readonly RBRACK = 41;
	public static readonly LPAREN = 42;
	public static readonly RPAREN = 43;
	public static readonly COMMA = 44;
	public static readonly ARROW = 45;
	public static readonly DOUBLEARROW = 46;
	public static readonly COLON = 47;
	public static readonly DOT = 48;
	public static readonly SEMI = 49;
	public static readonly GREEK = 50;
	public static readonly NATURAL_NUMBER = 51;
	public static readonly ZERO = 52;
	public static readonly ID = 53;
	public static readonly LINE_COMMENT = 54;
	public static readonly WS = 55;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_expression = 0;
	public static readonly RULE_globalDecl = 1;
	public static readonly RULE_term = 2;
	public static readonly RULE_type = 3;
	public static readonly RULE_typeVariable = 4;
	public static readonly RULE_constant = 5;
	public static readonly RULE_kind = 6;
	public static readonly literalNames: (string | null)[] = [ null, "'Nat'", 
                                                            "'Bool'", "'Unit'", 
                                                            "'true'", "'True'", 
                                                            "'false'", "'False'", 
                                                            "'unit'", null, 
                                                            "'\\u039B'", 
                                                            "'let'", "'in'", 
                                                            "'fix'", "'typedef'", 
                                                            "'@'", "'''", 
                                                            "'\\u2200'", 
                                                            "'case'", "'of'", 
                                                            "'inl'", "'inr'", 
                                                            "'||'", "'as'", 
                                                            "'if'", "'then'", 
                                                            "'elseif'", 
                                                            "'else'", "'_'", 
                                                            "'=='", "'!='", 
                                                            "'<='", "'>='", 
                                                            "'='", "'<'", 
                                                            "'>'", null, 
                                                            "'+'", "'-'", 
                                                            "'/'", "'['", 
                                                            "']'", "'('", 
                                                            "')'", "','", 
                                                            null, null, 
                                                            "':'", "'.'", 
                                                            "';'", null, 
                                                            null, "'0'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "LAMBDA", 
                                                             "LAMBDA_CAPITALIZED", 
                                                             "LET", "IN", 
                                                             "FIX", "TYPEDEF", 
                                                             "KIND_STAR", 
                                                             "APOSTROPHE", 
                                                             "FORALL", "CASE", 
                                                             "OF", "INL", 
                                                             "INR", "OR", 
                                                             "AS", "IF", 
                                                             "THEN", "ELSEIF", 
                                                             "ELSE", "UNDERSCORE", 
                                                             "EQEQ", "NEQ", 
                                                             "LEQ", "GEQ", 
                                                             "EQ", "LT", 
                                                             "MT", "MUL", 
                                                             "PLUS", "MINUS", 
                                                             "DIV", "LBRACK", 
                                                             "RBRACK", "LPAREN", 
                                                             "RPAREN", "COMMA", 
                                                             "ARROW", "DOUBLEARROW", 
                                                             "COLON", "DOT", 
                                                             "SEMI", "GREEK", 
                                                             "NATURAL_NUMBER", 
                                                             "ZERO", "ID", 
                                                             "LINE_COMMENT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"expression", "globalDecl", "term", "type", "typeVariable", "constant", 
		"kind",
	];
	public get grammarFileName(): string { return "Lambda.g4"; }
	public get literalNames(): (string | null)[] { return LambdaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LambdaParser.symbolicNames; }
	public get ruleNames(): string[] { return LambdaParser.ruleNames; }
	public get serializedATN(): number[] { return LambdaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LambdaParser._ATN, LambdaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LambdaParser.RULE_expression);
		let _la: number;
		try {
			let _alt: number;
			localctx = new ExprContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 17;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 14;
					this.globalDecl();
					}
					}
				}
				this.state = 19;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 23;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 20197368) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 917825) !== 0)) {
				{
				this.state = 20;
				this.term(0);
				this.state = 21;
				this.match(LambdaParser.SEMI);
				}
			}

			this.state = 25;
			this.match(LambdaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public globalDecl(): GlobalDeclContext {
		let localctx: GlobalDeclContext = new GlobalDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LambdaParser.RULE_globalDecl);
		try {
			this.state = 45;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				localctx = new GlobalVariableDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 27;
				this.match(LambdaParser.ID);
				this.state = 28;
				this.match(LambdaParser.COLON);
				this.state = 29;
				this.type_(0);
				this.state = 30;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 2:
				localctx = new GlobalFunctionDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 32;
				this.match(LambdaParser.ID);
				this.state = 33;
				this.match(LambdaParser.EQ);
				this.state = 34;
				this.term(0);
				this.state = 35;
				this.match(LambdaParser.COLON);
				this.state = 36;
				this.type_(0);
				this.state = 37;
				this.match(LambdaParser.SEMI);
				}
				break;
			case 3:
				localctx = new TypeAliasDeclarationContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 39;
				this.match(LambdaParser.TYPEDEF);
				this.state = 40;
				this.match(LambdaParser.ID);
				this.state = 41;
				this.match(LambdaParser.EQ);
				this.state = 42;
				this.type_(0);
				this.state = 43;
				this.match(LambdaParser.SEMI);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public term(): TermContext;
	public term(_p: number): TermContext;
	// @RuleVersion(0)
	public term(_p?: number): TermContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TermContext = new TermContext(this, this._ctx, _parentState);
		let _prevctx: TermContext = localctx;
		let _startState: number = 4;
		this.enterRecursionRule(localctx, 4, LambdaParser.RULE_term, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 193;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				localctx = new DummyAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 48;
				this.match(LambdaParser.LAMBDA);
				this.state = 49;
				this.match(LambdaParser.UNDERSCORE);
				this.state = 50;
				this.match(LambdaParser.COLON);
				this.state = 51;
				this.type_(0);
				this.state = 52;
				this.match(LambdaParser.DOT);
				this.state = 53;
				this.term(17);
				}
				break;
			case 2:
				{
				localctx = new LambdaAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 55;
				this.match(LambdaParser.LAMBDA);
				this.state = 56;
				this.match(LambdaParser.ID);
				this.state = 57;
				this.match(LambdaParser.COLON);
				this.state = 58;
				this.type_(0);
				this.state = 59;
				this.match(LambdaParser.DOT);
				this.state = 60;
				this.term(16);
				}
				break;
			case 3:
				{
				localctx = new LambdaAbstractionUntypedContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 62;
				this.match(LambdaParser.LAMBDA);
				this.state = 63;
				this.match(LambdaParser.ID);
				this.state = 64;
				this.match(LambdaParser.DOT);
				this.state = 65;
				this.term(15);
				}
				break;
			case 4:
				{
				localctx = new TypeAbstractionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 66;
				this.match(LambdaParser.LAMBDA_CAPITALIZED);
				this.state = 67;
				this.typeVariable();
				this.state = 68;
				this.match(LambdaParser.DOT);
				this.state = 69;
				this.term(14);
				}
				break;
			case 5:
				{
				localctx = new LetExpressionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 71;
				this.match(LambdaParser.LET);
				this.state = 72;
				this.match(LambdaParser.ID);
				this.state = 73;
				this.match(LambdaParser.EQ);
				this.state = 74;
				this.term(0);
				this.state = 75;
				this.match(LambdaParser.IN);
				this.state = 76;
				this.term(13);
				}
				break;
			case 6:
				{
				localctx = new IfConditionContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 78;
				this.match(LambdaParser.IF);
				this.state = 79;
				this.term(0);
				this.state = 80;
				this.match(LambdaParser.THEN);
				this.state = 81;
				this.term(0);
				this.state = 89;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 82;
						this.match(LambdaParser.ELSEIF);
						this.state = 83;
						this.term(0);
						this.state = 84;
						this.match(LambdaParser.THEN);
						this.state = 85;
						this.term(0);
						}
						}
					}
					this.state = 91;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
				}
				this.state = 94;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 92;
					this.match(LambdaParser.ELSE);
					this.state = 93;
					this.term(0);
					}
					break;
				}
				}
				break;
			case 7:
				{
				localctx = new CaseContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 96;
				this.match(LambdaParser.CASE);
				this.state = 97;
				this.term(0);
				this.state = 98;
				this.match(LambdaParser.OR);
				this.state = 99;
				this.match(LambdaParser.INL);
				this.state = 100;
				this.match(LambdaParser.ID);
				this.state = 101;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 102;
				this.term(0);
				this.state = 103;
				this.match(LambdaParser.OR);
				this.state = 104;
				this.match(LambdaParser.INR);
				this.state = 105;
				this.match(LambdaParser.ID);
				this.state = 106;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 107;
				this.term(11);
				}
				break;
			case 8:
				{
				localctx = new VariantCaseContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 109;
				this.match(LambdaParser.CASE);
				this.state = 110;
				this.term(0);
				this.state = 111;
				this.match(LambdaParser.OF);
				this.state = 112;
				this.match(LambdaParser.LBRACK);
				this.state = 113;
				this.match(LambdaParser.ID);
				this.state = 114;
				this.match(LambdaParser.EQ);
				this.state = 115;
				this.match(LambdaParser.ID);
				this.state = 116;
				this.match(LambdaParser.RBRACK);
				this.state = 117;
				this.match(LambdaParser.DOUBLEARROW);
				this.state = 118;
				this.term(0);
				this.state = 129;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 119;
						this.match(LambdaParser.OR);
						this.state = 120;
						this.match(LambdaParser.LBRACK);
						this.state = 121;
						this.match(LambdaParser.ID);
						this.state = 122;
						this.match(LambdaParser.EQ);
						this.state = 123;
						this.match(LambdaParser.ID);
						this.state = 124;
						this.match(LambdaParser.RBRACK);
						this.state = 125;
						this.match(LambdaParser.DOUBLEARROW);
						this.state = 126;
						this.term(0);
						}
						}
					}
					this.state = 131;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
				}
				}
				break;
			case 9:
				{
				localctx = new InlContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 132;
				this.match(LambdaParser.INL);
				this.state = 133;
				this.term(0);
				this.state = 134;
				this.match(LambdaParser.AS);
				this.state = 135;
				this.type_(0);
				}
				break;
			case 10:
				{
				localctx = new InrContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 137;
				this.match(LambdaParser.INR);
				this.state = 138;
				this.term(0);
				this.state = 139;
				this.match(LambdaParser.AS);
				this.state = 140;
				this.type_(0);
				}
				break;
			case 11:
				{
				localctx = new FixContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 142;
				this.match(LambdaParser.FIX);
				this.state = 143;
				this.term(7);
				}
				break;
			case 12:
				{
				localctx = new RecordContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 144;
				this.match(LambdaParser.LT);
				this.state = 145;
				this.match(LambdaParser.ID);
				this.state = 146;
				this.match(LambdaParser.EQ);
				this.state = 147;
				this.term(0);
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===44) {
					{
					{
					this.state = 148;
					this.match(LambdaParser.COMMA);
					this.state = 149;
					this.match(LambdaParser.ID);
					this.state = 150;
					this.match(LambdaParser.EQ);
					this.state = 151;
					this.term(0);
					}
					}
					this.state = 156;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 157;
				this.match(LambdaParser.MT);
				}
				break;
			case 13:
				{
				localctx = new TupleContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 159;
				this.match(LambdaParser.LT);
				this.state = 160;
				this.term(0);
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===44) {
					{
					{
					this.state = 161;
					this.match(LambdaParser.COMMA);
					this.state = 162;
					this.term(0);
					}
					}
					this.state = 167;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 168;
				this.match(LambdaParser.MT);
				}
				break;
			case 14:
				{
				localctx = new VariantContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 170;
				this.match(LambdaParser.LBRACK);
				this.state = 171;
				this.match(LambdaParser.ID);
				this.state = 172;
				this.match(LambdaParser.EQ);
				this.state = 173;
				this.term(0);
				this.state = 180;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===44) {
					{
					{
					this.state = 174;
					this.match(LambdaParser.COMMA);
					this.state = 175;
					this.match(LambdaParser.ID);
					this.state = 176;
					this.match(LambdaParser.EQ);
					this.state = 177;
					this.term(0);
					}
					}
					this.state = 182;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 183;
				this.match(LambdaParser.RBRACK);
				this.state = 184;
				this.match(LambdaParser.AS);
				this.state = 185;
				this.type_(0);
				}
				break;
			case 15:
				{
				localctx = new VariableContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 187;
				this.match(LambdaParser.ID);
				}
				break;
			case 16:
				{
				localctx = new ParenthesesContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 188;
				this.match(LambdaParser.LPAREN);
				this.state = 189;
				this.term(0);
				this.state = 190;
				this.match(LambdaParser.RPAREN);
				}
				break;
			case 17:
				{
				localctx = new LiteralContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 192;
				this.constant();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 219;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 217;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
					case 1:
						{
						localctx = new ApplicationContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 195;
						if (!(this.precpred(this._ctx, 22))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 22)");
						}
						this.state = 196;
						this.term(23);
						}
						break;
					case 2:
						{
						localctx = new BinaryOpContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 197;
						if (!(this.precpred(this._ctx, 20))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 20)");
						}
						this.state = 198;
						(localctx as BinaryOpContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(((((_la - 29)) & ~0x1F) === 0 && ((1 << (_la - 29)) & 2031) !== 0))) {
						    (localctx as BinaryOpContext)._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 199;
						this.term(21);
						}
						break;
					case 3:
						{
						localctx = new SequencingContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 200;
						if (!(this.precpred(this._ctx, 18))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 18)");
						}
						this.state = 201;
						this.match(LambdaParser.SEMI);
						this.state = 202;
						this.term(18);
						}
						break;
					case 4:
						{
						localctx = new TupleProjectionContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 203;
						if (!(this.precpred(this._ctx, 24))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 24)");
						}
						this.state = 204;
						this.match(LambdaParser.DOT);
						this.state = 205;
						this.match(LambdaParser.NATURAL_NUMBER);
						}
						break;
					case 5:
						{
						localctx = new RecordProjectionContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 206;
						if (!(this.precpred(this._ctx, 23))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 23)");
						}
						this.state = 207;
						this.match(LambdaParser.DOT);
						this.state = 208;
						this.match(LambdaParser.ID);
						}
						break;
					case 6:
						{
						localctx = new TypeApplicationContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 209;
						if (!(this.precpred(this._ctx, 21))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 21)");
						}
						this.state = 210;
						this.match(LambdaParser.LBRACK);
						this.state = 211;
						this.type_(0);
						this.state = 212;
						this.match(LambdaParser.RBRACK);
						}
						break;
					case 7:
						{
						localctx = new AscribeContext(this, new TermContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, LambdaParser.RULE_term);
						this.state = 214;
						if (!(this.precpred(this._ctx, 19))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 19)");
						}
						this.state = 215;
						this.match(LambdaParser.AS);
						this.state = 216;
						this.type_(0);
						}
						break;
					}
					}
				}
				this.state = 221;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public type_(): TypeContext;
	public type_(_p: number): TypeContext;
	// @RuleVersion(0)
	public type_(_p?: number): TypeContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TypeContext = new TypeContext(this, this._ctx, _parentState);
		let _prevctx: TypeContext = localctx;
		let _startState: number = 6;
		this.enterRecursionRule(localctx, 6, LambdaParser.RULE_type, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 266;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 17:
				{
				localctx = new ForallTypeContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
